fixed photo head alignment

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -82,6 +82,9 @@
         text-align: left;
     } 
     
+    #about-head {
+        text-align: center;
+    }
 }
 
 
